--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body>
+<!--<body style="color:#3d3d66;background-color:#add0f3">-->
+<body style="color:#606000;background-color:#f3eddc">
 <app>Loading...</app>
 </body>
 </html>
