Remove global text color, change color of common name

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <!--<body style="color:#3d3d66;background-color:#add0f3">-->
-<body style="color:#606000;background-color:#f3eddc">
+<body style="background-color:#f3eddc">
 <app>Loading...</app>
 </body>
 </html>
