--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,4 +10,25 @@
 <body style="background-color:#f3eddc">
 <app>Loading...</app>
 </body>
+<footer style="width: 100%;
+        background-color: #4c66a4;
+        color: #fff;
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        text-align: center;">
+    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 <br/> Phone: (320) 589-1711 <br/> Fax: (320) 589-4870</p>
+</footer>
 </html>
+
+<!--<style>-->
+    <!--.foot {-->
+        <!--width: 100%;-->
+        <!--background-color: #4c66a4;-->
+        <!--color: #fff;-->
+        <!--position: absolute;-->
+        <!--left: 0px;-->
+        <!--bottom: 0px;-->
+        <!--text-align: center;-->
+    <!--}-->
+<!--</style>-->
