--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,31 +4,46 @@
     <title>Digital Display Garden</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="social-media-button.css">
 
 </head>
 <!--<body style="color:#3d3d66;background-color:#add0f3">-->
-<body style="background-color:#f3eddc">
+<body style="background-color:#f3eddc;
+        min-height: 100%;
+        position: relative;
+        padding-bottom:90px;">
 <app>Loading...</app>
 </body>
 <footer style="width: 100%;
+        background-color: maroon;
+        color: gold;
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        text-align: center;">
+    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 </p>
+    <button type="button" class="btn btn-fb" style="background-color: #4264aa; color: white"><i class="fa fa-facebook left"></i> Facebook</button>
+    <button type="button" class="btn btn-tw" style="background-color: #55acee; color: white"><i class="fa fa-twitter left"></i> Twitter</button>
+</footer>
+
+
+</html>
+
+<style>
+    .foot {
+        width: 100%;
         background-color: #4c66a4;
         color: #fff;
         position: absolute;
         left: 0px;
         bottom: 0px;
-        text-align: center;">
-    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 <br/> Phone: (320) 589-1711 <br/> Fax: (320) 589-4870</p>
-</footer>
-</html>
+        text-align: center;
+    }
 
-<!--<style>-->
-    <!--.foot {-->
-        <!--width: 100%;-->
-        <!--background-color: #4c66a4;-->
-        <!--color: #fff;-->
-        <!--position: absolute;-->
-        <!--left: 0px;-->
-        <!--bottom: 0px;-->
-        <!--text-align: center;-->
-    <!--}-->
-<!--</style>-->
+    /*.btn-facebook{color:#fff;background-color:#3b5998;border-color:rgba(0,0,0,0.2)}.btn-facebook:focus,.btn-facebook.focus{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}*/
+    /*.btn-facebook:hover{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}*/
+    /*.btn-facebook:active,.btn-facebook.active,.open>.dropdown-toggle.btn-facebook{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}.btn-facebook:active:hover,.btn-facebook.active:hover,.open>.dropdown-toggle.btn-facebook:hover,.btn-facebook:active:focus,.btn-facebook.active:focus,.open>.dropdown-toggle.btn-facebook:focus,.btn-facebook:active.focus,.btn-facebook.active.focus,.open>.dropdown-toggle.btn-facebook.focus{color:#fff;background-color:#23345a;border-color:rgba(0,0,0,0.2)}*/
+    /*.btn-facebook:active,.btn-facebook.active,.open>.dropdown-toggle.btn-facebook{background-image:none}*/
+    /*.btn-facebook.disabled:hover,.btn-facebook[disabled]:hover,fieldset[disabled] .btn-facebook:hover,.btn-facebook.disabled:focus,.btn-facebook[disabled]:focus,fieldset[disabled] .btn-facebook:focus,.btn-facebook.disabled.focus,.btn-facebook[disabled].focus,fieldset[disabled] .btn-facebook.focus{background-color:#3b5998;border-color:rgba(0,0,0,0.2)}*/
+    /*.btn-facebook .badge{color:#3b5998;background-color:#fff}*/
+</style>
