--- a/client/src/index.html
+++ b/client/src/index.html
@@ -22,8 +22,12 @@
         bottom: 0px;
         text-align: center;">
     <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 </p>
-    <button type="button" class="btn btn-fb" style="background-color: #4264aa; color: white"><i class="fa fa-facebook left"></i> Facebook</button>
-    <button type="button" class="btn btn-tw" style="background-color: #55acee; color: white"><i class="fa fa-twitter left"></i> Twitter</button>
+    <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';" class="btn btn-fb" style="background-color: #4264aa; color: white">
+        <i class="fa fa-facebook left"></i> Facebook
+    </button>
+    <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw" style="background-color: #55acee; color: white">
+        <i class="fa fa-twitter left"></i> Twitter
+    </button>
 </footer>
 
 
