Remove small margin on top of facebook, and twitter buttons
Issue: #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,13 +21,14 @@
         left: 0px;
         bottom: 0px;
         text-align: center;">
-    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 </p>
+    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 Morris MN 56267 <br/>
     <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';" class="btn btn-fb" style="background-color: #4264aa; color: white">
         <i class="fa fa-facebook left"></i> Facebook
     </button>
     <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw" style="background-color: #55acee; color: white">
         <i class="fa fa-twitter left"></i> Twitter
     </button>
+    </p>
 </footer>
 
 
