--- a/client/src/index.html
+++ b/client/src/index.html
@@ -16,6 +16,7 @@
 <app>Loading...</app>
 </body>
 
+<div id="wrapper">
 <footer style="width: 100%;
         background-color: maroon;
         color: gold;
@@ -36,4 +37,6 @@
 
     </p>
 </footer>
+</div>
+
 </html>
