linked css to html
issue #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
     <title>Digital Display Garden</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="footer-wrapper">
+    <link rel="stylesheet" type="text/css" href="app/plants/footer-wrapper.css">
 
 </head>
 
