fixed link css to html. Added footer styling to css.
issue #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<div id="wrapper">
+<div class="wrapper">
 <body style="background-color:#f3eddc;
         min-height: 100%;
         position: relative;
@@ -17,14 +17,7 @@
 <app>Loading...</app>
 </body>
 
-
-<footer style="width: 100%;
-        background-color: maroon;
-        color: gold;
-        position: absolute;
-        left: 0px;
-        bottom: 0px;
-        text-align: center;">
+<div id="footer">
     <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/>
 
     <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
@@ -37,7 +30,7 @@
     </button>
 
     </p>
-</footer>
+</div>
 </div>
 
 </html>
