placed styling code into html
issue #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="app/plants/footer-wrapper.css">
-
 </head>
 
-<div class="wrapper">
-<body style="background-color:#f3eddc;
+<div style="min-height: 100%;
+    padding-bottom:100px;">
+
+    <body style="background-color:#f3eddc;
         min-height: 100%;
         position: relative;
         padding-bottom:90px;">
+        <app>Loading...</app>
+    </body>
 
-<app>Loading...</app>
-</body>
 
-<div id="footer">
+<footer style="width: 100%;
+     background-color: maroon;
+     color: gold;
+     position: absolute;
+     left: 0px;
+     bottom: 0px;
+     text-align: center;">
     <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/>
 
     <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
@@ -30,7 +37,7 @@
     </button>
 
     </p>
-</div>
+</footer>
 </div>
 
 </html>
