Added WCROC button to footer
issue #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -36,6 +36,10 @@
         <i class="fa fa-twitter left"></i> Twitter
     </button>
 
+        <button type="submit" onclick="location.href='https://wcroc.cfans.umn.edu/';" class="btn btn-tw" style="background-color: goldenrod; color: white">
+             WCROC
+        </button>
+
     </p>
 </footer>
 </div>
