changed positioning of the footer to stay on the bottom when viewed on firefox
issue #6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,7 +21,7 @@
 <footer style="width: 100%;
      background-color: maroon;
      color: gold;
-     position: absolute;
+     position: fixed;
      left: 0px;
      bottom: 0px;
      text-align: center;">
