--- a/client/src/index.html
+++ b/client/src/index.html
@@ -24,19 +24,19 @@
      left: 0px;
      bottom: 0px;
      text-align: center;">
-    <p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/>
+    <b><p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/></b>
 
     <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
             class="btn btn-fb" style="background-color: #4264aa; color: white">
-        <i class="fa fa-facebook left"></i> Facebook
+        <i class="fa fa-facebook left"></i> <b>Facebook</b>
     </button>
 
     <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw" style="background-color: #55acee; color: white">
-        <i class="fa fa-twitter left"></i> Twitter
+        <i class="fa fa-twitter left"></i> <b>Twitter</b>
     </button>
 
         <button type="submit" onclick="location.href='https://wcroc.cfans.umn.edu/';" class="btn btn-tw" style="background-color: goldenrod; color: white">
-             WCROC
+            <b>WCROC</b>
         </button>
 
     </p>
