--- a/client/src/index.html
+++ b/client/src/index.html
@@ -13,34 +13,36 @@
         min-height: 100%;
         position: relative;
         padding-bottom: 70px;">
-        <app>Loading...</app>
+    <app>Loading...</app>
     </body>
 
 
-<footer style="width: 100%;
+    <footer style="width: 100%;
      background-color: maroon;
      color: gold;
      position: fixed;
      left: 0px;
      bottom: 0px;
      text-align: center;">
-    <b><p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/></b>
+        <b><p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/></b>
 
-    <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
-            class="btn btn-fb" style="background-color: #4264aa; color: white">
-        <i class="fa fa-facebook left"></i> <b>Facebook</b>
-    </button>
+        <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
+                class="btn btn-fb" style="background-color: #4264aa; color: white">
+            <i class="fa fa-facebook left"></i> <b>Facebook</b>
+        </button>
 
-    <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw" style="background-color: #55acee; color: white">
-        <i class="fa fa-twitter left"></i> <b>Twitter</b>
-    </button>
+        <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw"
+                style="background-color: #55acee; color: white">
+            <i class="fa fa-twitter left"></i> <b>Twitter</b>
+        </button>
 
-        <button type="submit" onclick="location.href='https://wcroc.cfans.umn.edu/';" class="btn btn-tw" style="background-color: goldenrod; color: white">
+        <button type="submit" onclick="location.href='https://wcroc.cfans.umn.edu/';" class="btn btn-tw"
+                style="background-color: goldenrod; color: white">
             <b>WCROC</b>
         </button>
 
-    </p>
-</footer>
+        </p>
+    </footer>
 </div>
 
 </html>
