Make <body> the outermost of the body in index.html

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<div style="min-height: 100%;
+<body style="min-height: 100%;
     padding-bottom:100px;">
 
-    <body style="background-color:#f3eddc;
+    <div style="background-color:#f3eddc;
         min-height: 100%;
         position: relative;
         padding-bottom: 70px;">
     <app>Loading...</app>
-    </body>
+    </div>
 
 
     <footer style="width: 100%;
@@ -43,6 +43,6 @@
 
         </p>
     </footer>
-</div>
+</body>
 
 </html>
