Make footer work with Firefox & Chrome on Desktop

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,4 +1,4 @@
-<html>
+<html style="margin: 0; padding: 0; height: 100%">
 <head>
     <base href="/">
     <title>Digital Display Garden</title>
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body style="min-height: 100%;
-    padding-bottom:100px;">
+<body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc;">
 
-    <div style="background-color:#f3eddc;
-        min-height: 100%;
-        position: relative;
-        padding-bottom: 70px;">
+<div id="container" style="min-height:100%; position:relative;">
+    <div style=" padding-bottom: 104px;">
     <app>Loading...</app>
     </div>
 
@@ -20,9 +17,9 @@
     <footer style="width: 100%;
      background-color: maroon;
      color: gold;
-     position: fixed;
-     left: 0px;
+     position: absolute;
      bottom: 0px;
+     height: 104px;
      text-align: center;">
         <b><p>West Central Research and Outreach Center <br/> 46352 State Hwy 329 <br/> Morris MN, 56267 <br/></b>
 
@@ -43,6 +40,7 @@
 
         </p>
     </footer>
+</div>
 </body>
 
 </html>
