--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,7 @@
     <title>Digital Display Garden</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc;">
@@ -25,12 +26,12 @@
 
         <button type="submit" onclick="location.href='https://www.facebook.com/HorticultureDisplayGarden/';"
                 class="btn btn-fb" style="background-color: #4264aa; color: white">
-            <i class="fa fa-facebook left"></i> <b>Facebook</b>
+            <i class="fa fa-facebook left" aria-hidden="true"></i> <b>Facebook</b>
         </button>
 
         <button type="submit" onclick="location.href='https://twitter.com/wcrocmorris';" class="btn btn-tw"
                 style="background-color: #55acee; color: white">
-            <i class="fa fa-twitter left"></i> <b>Twitter</b>
+            <i class="fa fa-twitter left" aria-hidden="true"></i> <b>Twitter</b>
         </button>
 
         <button type="submit" onclick="location.href='https://wcroc.cfans.umn.edu/';" class="btn btn-tw"
