Fix header margins/padding

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
 <body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc;">
 
 <div id="container" style="min-height:100%; position:relative;">
-    <div style=" padding-bottom: 104px;">
+    <div style=" padding-bottom: 104px; padding-top: 115px">
     <app>Loading...</app>
     </div>
 
