Fix header on small screens
Issue #41

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc;">
+<body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc; min-width: 320px">
 
 <div id="container" style="min-height:100%; position:relative;">
     <div style=" padding-bottom: 104px; padding-top: 115px">
