--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,4 +1,4 @@
-<html style="margin: 0; padding: 0; height: 100%">
+<html>
 <head>
     <base href="/">
     <title>Digital Display Garden</title>
@@ -9,10 +9,10 @@
 
 </head>
 
-<body style="margin: 0; padding: 0; height: 100%;background-color:#f3eddc; min-width: 320px">
+<body style="">
 
-<div id="container" style="min-height:100%; position:relative;">
-    <div style=" padding-bottom: 104px; padding-top: 115px">
+<div id="container">
+    <div id="inner-body">
     <app>Loading...</app>
     </div>
 
@@ -38,6 +38,30 @@
 </body>
 
 <style>
+    html {
+        margin: 0;
+        padding: 0;
+        height: 100%
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color:#f3eddc;
+        min-width: 320px
+    }
+
+    /* IntelliJ lies: #container IS being used!!! */
+    #container {
+        min-height:100%;
+        position:relative;
+    }
+
+    #inner-body {
+        padding-bottom: 104px;
+        padding-top: 115px
+    }
     .info-text {
         padding-top: 5px;
         margin-bottom: 5px;
