--- a/client/src/index.html
+++ b/client/src/index.html
@@ -58,10 +58,13 @@
         position:relative;
     }
 
+    /* see comment above */
     #inner-body {
         padding-bottom: 104px;
         padding-top: 115px
     }
+
+    /* see comment above */
     .info-text {
         padding-top: 5px;
         margin-bottom: 5px;
