--- a/client/src/index.html
+++ b/client/src/index.html
@@ -58,17 +58,39 @@
         position:relative;
     }
 
-    /* see comment above */
-    #inner-body {
-        padding-bottom: 104px;
-        padding-top: 115px
-    }
 
     /* see comment above */
     .info-text {
         padding-top: 5px;
         margin-bottom: 5px;
     }
+
+    /* see comment above */
+    #inner-body {
+        padding-top: 115px;
+    }
+
+    /* below this size, the buttons wrap */
+    @media (max-width: 333px) {
+        #inner-body {
+            padding-bottom: 168px;
+        }
+    }
+
+    /* in this range only the address is wrapped */
+    @media (max-width:351px) and (min-width: 334px){
+        #inner-body {
+            padding-bottom: 134px;
+        }
+    }
+
+    /* at this size and up, the footer has no wrapping */
+    @media (min-width:352px) {
+        #inner-body {
+            padding-bottom: 114px;
+        }
+    }
+
     footer {
         font-weight: bold;
         width: 100%;
